--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>This is a paragraphs</p>
-    <h1>This is a new Feature</h1>
+    <h1>This is a new Feature (button)</h1>
     <h2>hello</h2>
 </body>
 </html>
