--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p>This is a paragraphs</p>
-    <h1>This is a new Feature</h1>
+    <h1>This is a new Feature (dropdown)</h1>
 </body>
 </html>
